[gd_scene load_steps=8 format=3 uid="uid://cjni8qecs1cia"]

[ext_resource type="Script" path="res://scripts/menus/pause_menu.gd" id="1_4345f"]
[ext_resource type="Texture2D" uid="uid://csx4ipr2e1xr7" path="res://assets/ui/menu/Options_up.png" id="2_g7a6d"]
[ext_resource type="Texture2D" uid="uid://ck13dp5yia7rg" path="res://assets/ui/menu/options_Down.png" id="3_32t1y"]
[ext_resource type="Texture2D" uid="uid://c6ied4t7jcjdc" path="res://assets/ui/menu/options_Hover.png" id="4_07kcm"]
[ext_resource type="Texture2D" uid="uid://lxsi1s65a6bm" path="res://assets/ui/menu/quit_Up.png" id="5_0fgtj"]
[ext_resource type="Texture2D" uid="uid://dug7vqwetllpg" path="res://assets/ui/menu/Quit_Down.png" id="6_kjhbc"]
[ext_resource type="Texture2D" uid="uid://dkylj0ss43wmg" path="res://assets/ui/menu/quit_Hover.png" id="7_ho57f"]

[node name="PauseMenu" type="Control"]
process_mode = 3
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4345f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Resume"

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_g7a6d")
texture_pressed = ExtResource("3_32t1y")
texture_hover = ExtResource("4_07kcm")
stretch_mode = 0

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../ResumeButton")
texture_normal = ExtResource("5_0fgtj")
texture_pressed = ExtResource("6_kjhbc")
texture_hover = ExtResource("7_ho57f")
stretch_mode = 0

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
